Fixed the overlapping of the blog-nav items (positioning bug) - Used classes on the body, evaluating the window.innerHeight as a multiple of the topGutterHeight

--- a/a/css/screen.css
+++ b/a/css/screen.css
@@ -420,13 +420,13 @@ div.intro {
     font-size: 93.75%;
   }
 }
-/* line 18, ../sass/layouts/post.sass */
+/* line 17, ../sass/layouts/post.sass */
 .js {
   padding-top: 300px;
   padding-top: 30rem;
 }
 
-/* line 21, ../sass/layouts/post.sass */
+/* line 20, ../sass/layouts/post.sass */
 .post h1 {
   font-size: 43px;
   font-size: 4.3rem;
@@ -442,7 +442,7 @@ div.intro {
   color: #bb5400;
 }
 @media (min-width: 512px) and (min-height: 25em) {
-  /* line 21, ../sass/layouts/post.sass */
+  /* line 20, ../sass/layouts/post.sass */
   .post h1 {
     font-size: 66px;
     font-size: 6.6rem;
@@ -453,7 +453,7 @@ div.intro {
   }
 }
 
-/* line 35, ../sass/layouts/post.sass */
+/* line 34, ../sass/layouts/post.sass */
 .post h2 {
   font-size: 22px;
   font-size: 2.2rem;
@@ -469,7 +469,7 @@ div.intro {
   font-style: normal;
 }
 
-/* line 45, ../sass/layouts/post.sass */
+/* line 44, ../sass/layouts/post.sass */
 .post p {
   text-indent: 0em;
   margin-top: 0;
@@ -480,7 +480,7 @@ div.intro {
   font-style: normal;
 }
 
-/* line 53, ../sass/layouts/post.sass */
+/* line 52, ../sass/layouts/post.sass */
 .post-details > p:first-of-type {
   text-indent: 0;
   font-size: 20px;
@@ -494,7 +494,7 @@ div.intro {
   font-style: normal;
 }
 @media (min-width: 512px) and (min-height: 25em) {
-  /* line 53, ../sass/layouts/post.sass */
+  /* line 52, ../sass/layouts/post.sass */
   .post-details > p:first-of-type {
     line-height: 36px;
     line-height: 3.6rem;
@@ -503,7 +503,7 @@ div.intro {
   }
 }
 
-/* line 65, ../sass/layouts/post.sass */
+/* line 64, ../sass/layouts/post.sass */
 .post blockquote {
   margin-bottom: 25px;
   margin-bottom: 2.5rem;
@@ -520,7 +520,7 @@ div.intro {
   font-style: italic;
 }
 
-/* line 75, ../sass/layouts/post.sass */
+/* line 74, ../sass/layouts/post.sass */
 .post blockquote p {
   font-size: 1em;
   font-family: inherit;
@@ -528,7 +528,7 @@ div.intro {
   font-style: inherit;
 }
 
-/* line 81, ../sass/layouts/post.sass */
+/* line 80, ../sass/layouts/post.sass */
 .post p.meta {
   font-family: adelle, serif;
   color: #bcafa5;
@@ -723,32 +723,26 @@ a.intro-more:hover, a.intro-more:active {
   line-height: 24px;
   line-height: 2.4rem;
 }
-@media (min-width: 512px) and (min-height: 25em) {
-  /* line 30, ../sass/modules/blog-nav.sass */
-  .blog-nav-previous, .blog-nav-next {
-    padding: 30px;
-    padding: 3rem;
-    bottom: 100px;
-    bottom: 10rem;
-  }
-}
-@media (min-height: 30em) {
-  /* line 30, ../sass/modules/blog-nav.sass */
-  .blog-nav-previous, .blog-nav-next {
-    font-size: 25px;
-    font-size: 2.5rem;
-    line-height: 30px;
-    line-height: 3rem;
-  }
+
+/* line 47, ../sass/modules/blog-nav.sass */
+.is-fits-blog-nav-large .blog-nav-previous, .is-fits-blog-nav-large .blog-nav-next {
+  padding: 30px;
+  padding: 3rem;
+  bottom: 100px;
+  bottom: 10rem;
+  font-size: 25px;
+  font-size: 2.5rem;
+  line-height: 30px;
+  line-height: 3rem;
 }
 
-/* line 52, ../sass/modules/blog-nav.sass */
+/* line 53, ../sass/modules/blog-nav.sass */
 .blog-nav-previous:hover, .blog-nav-next:hover {
   background: rgba(87, 55, 29, 0.6);
   color: white;
 }
 
-/* line 56, ../sass/modules/blog-nav.sass */
+/* line 57, ../sass/modules/blog-nav.sass */
 .blog-nav-previous:active, .blog-nav-next:active {
   -webkit-transition-property: none;
   -moz-transition-property: none;
@@ -757,46 +751,45 @@ a.intro-more:hover, a.intro-more:active {
   background: rgba(87, 55, 29, 0.8);
 }
 
-/* line 60, ../sass/modules/blog-nav.sass */
+/* line 61, ../sass/modules/blog-nav.sass */
 .is-top .blog-nav-previous, .is-top .blog-nav-next {
   display: none;
   color: white;
 }
-@media (min-height: 25em) {
-  /* line 60, ../sass/modules/blog-nav.sass */
-  .is-top .blog-nav-previous, .is-top .blog-nav-next {
-    display: block;
-    bottom: 15px;
-    bottom: 1.5rem;
-  }
-}
-@media (min-height: 30em) {
-  /* line 60, ../sass/modules/blog-nav.sass */
-  .is-top .blog-nav-previous, .is-top .blog-nav-next {
-    bottom: 50px;
-    bottom: 5rem;
-  }
-}
-@media (min-height: 60em) {
-  /* line 60, ../sass/modules/blog-nav.sass */
-  .is-top .blog-nav-previous, .is-top .blog-nav-next {
-    bottom: 100px;
-    bottom: 10rem;
-  }
+
+/* line 66, ../sass/modules/blog-nav.sass */
+.is-fits-blog-nav-simple.is-top .blog-nav-previous, .is-fits-blog-nav-simple.is-top .blog-nav-next {
+  display: block;
+  bottom: 15px;
+  bottom: 1.5rem;
 }
 
 /* line 71, ../sass/modules/blog-nav.sass */
+.is-fits-blog-nav.is-top .blog-nav-previous, .is-fits-blog-nav.is-top .blog-nav-next {
+  display: block;
+  bottom: 50px;
+  bottom: 5rem;
+}
+
+/* line 76, ../sass/modules/blog-nav.sass */
+.is-fits-blog-nav-large.is-top .blog-nav-previous, .is-fits-blog-nav-large.is-top .blog-nav-next {
+  display: block;
+  bottom: 80px;
+  bottom: 8rem;
+}
+
+/* line 80, ../sass/modules/blog-nav.sass */
 .blog-nav-previous {
   left: 0;
 }
 
-/* line 74, ../sass/modules/blog-nav.sass */
+/* line 83, ../sass/modules/blog-nav.sass */
 .blog-nav-next {
   right: 0;
   text-align: right;
 }
 
-/* line 78, ../sass/modules/blog-nav.sass */
+/* line 87, ../sass/modules/blog-nav.sass */
 .blog-nav-label {
   font-family: adelle-sans;
   text-transform: uppercase;
@@ -806,33 +799,35 @@ a.intro-more:hover, a.intro-more:active {
   line-height: 16px;
   line-height: 1.6rem;
 }
-@media (min-height: 30em) {
-  /* line 78, ../sass/modules/blog-nav.sass */
-  .blog-nav-label {
-    font-size: 15px;
-    font-size: 1.5rem;
-    line-height: 20px;
-    line-height: 2rem;
-  }
+
+/* line 94, ../sass/modules/blog-nav.sass */
+.is-fits-blog-nav-large .blog-nav-label {
+  font-size: 15px;
+  font-size: 1.5rem;
+  line-height: 20px;
+  line-height: 2rem;
 }
 
-/* line 88, ../sass/modules/blog-nav.sass */
+/* line 98, ../sass/modules/blog-nav.sass */
 .blog-nav-label .separator {
   display: none;
 }
 
-/* line 91, ../sass/modules/blog-nav.sass */
+/* line 101, ../sass/modules/blog-nav.sass */
 .blog-nav-post-title {
   font-family: adelle;
   font-weight: 400;
   margin: 0;
+}
+
+/* line 106, ../sass/modules/blog-nav.sass */
+.is-top .blog-nav-post-title {
   display: none;
 }
-@media (min-width: 512px) and (min-height: 30em) {
-  /* line 91, ../sass/modules/blog-nav.sass */
-  .blog-nav-post-title {
-    display: block;
-  }
+
+/* line 109, ../sass/modules/blog-nav.sass */
+.is-fits-blog-nav.is-top .blog-nav-post-title {
+  display: block;
 }
 
 /* line 3, ../sass/modules/to-top.sass */
